目的関数を選べるように改良

--- a/paper_02/main.ipynb
+++ b/paper_02/main.ipynb
@@ -135,6 +135,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bc61152f",
+   "metadata": {},
+   "source": [
+    "目的関数をいろいろ改変したものに名前を付ける。\n",
+    "\n",
+    "- original\n",
+    "  - 原論文のアルゴリズム。目的関数は以下の3つ\n",
+    "    1. 経路長\n",
+    "    2. 交差点数\n",
+    "    3. 長さ整合\n",
+    "- add_corner_constraint\n",
+    "  - 原論文の目的関数に、さらに「曲げ回数」の最小化も入れたもの。\n",
+    "    1. 経路長\n",
+    "    2. 交差点数\n",
+    "    3. 長さ整合 \n",
+    "    4. 曲げ回数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ba7e488",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "algo_name = \"original\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "c6de8de1",
@@ -143,7 +173,7 @@
    "source": [
     "grid_size = 10\n",
     "graph_3d = Graph_3d(grid_size=grid_size)\n",
-    "algo = Algo(grid_size=grid_size, dim=3, to=graph_3d.to)"
+    "algo = Algo(grid_size=grid_size, dim=3, to=graph_3d.to, algo_name=algo_name)"
    ]
   },
   {
