コード整理。Algoにgraphを持たせるようにした。

--- a/paper_02/main.ipynb
+++ b/paper_02/main.ipynb
@@ -20,7 +20,6 @@
    "source": [
     "import sys\n",
     "import math\n",
-    "from heapq import *\n",
     "from collections import defaultdict\n",
     "import random\n",
     "import networkx as nx\n",
@@ -28,101 +27,10 @@
     "from typing import List\n",
     "sys.setrecursionlimit(10**7)\n",
     "\n",
+    "import utils\n",
     "from graph import Graph_2d, Graph_3d\n",
     "from algo import Algo\n",
     "from visualization import *"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fd77774b",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "### Utils"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "17892af2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def dijkstra(start, n, to):\n",
-    "    prevs = [0 for _ in range(n*n)]\n",
-    "    d = [float('inf') for _ in range(n*n)]\n",
-    "    d[start] = 0\n",
-    "    q = [(0, start)]\n",
-    "    while q:\n",
-    "        (ci, i) = heappop(q)\n",
-    "        if d[i] < ci:\n",
-    "            continue\n",
-    "        for j in to[i]:\n",
-    "            if d[j] > d[i] + 1:\n",
-    "                d[j] = d[i] + 1\n",
-    "                prevs[j] = i\n",
-    "                heappush(q, (d[j], j))\n",
-    "    return d, prevs\n",
-    "\n",
-    "def get_path(s, v, prevs):\n",
-    "    '''\n",
-    "    s -> vへの最短経路path\n",
-    "    '''\n",
-    "    if v == s:\n",
-    "        return [s]\n",
-    "    path = [v]\n",
-    "    while True:\n",
-    "        path.append(prevs[v])\n",
-    "        v = prevs[v]\n",
-    "        if v == s:\n",
-    "            return path\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7e387017",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def nodenum_to_coord(grid_size, nodenum):\n",
-    "    z = nodenum // (grid_size * grid_size)\n",
-    "    rem = nodenum % (grid_size * grid_size)\n",
-    "    y = rem // grid_size\n",
-    "    x = rem % grid_size\n",
-    "    return x, y, z\n",
-    "\n",
-    "\n",
-    "def counting_corner(grid_size ,path):\n",
-    "    \"\"\"\n",
-    "    pathの曲がり回数をカウントする\n",
-    "    \"\"\"\n",
-    "    corner_count = 0\n",
-    "    path_coordinates = []\n",
-    "    for p in path:\n",
-    "        x_, y_, z_ = nodenum_to_coord(grid_size, p)\n",
-    "        path_coordinates.append((x_, y_, z_))\n",
-    "\n",
-    "    for i in range(len(path_coordinates)):\n",
-    "        if i == 0 or i == len(path_coordinates)-1:\n",
-    "            # nop\n",
-    "            pass\n",
-    "        else:\n",
-    "            vec_1_x = path_coordinates[i][0] - path_coordinates[i-1][0]\n",
-    "            vec_1_y = path_coordinates[i][1] - path_coordinates[i-1][1]\n",
-    "            vec_1_z = path_coordinates[i][2] - path_coordinates[i-1][2]\n",
-    "            vec_1 = (vec_1_x, vec_1_y, vec_1_z)\n",
-    "\n",
-    "            vec_2_x = path_coordinates[i+1][0] - path_coordinates[i][0]\n",
-    "            vec_2_y = path_coordinates[i+1][1] - path_coordinates[i][1]\n",
-    "            vec_2_z = path_coordinates[i+1][2] - path_coordinates[i][2]\n",
-    "            vec_2 = (vec_2_x, vec_2_y, vec_2_z)\n",
-    "\n",
-    "            if vec_1 != vec_2:\n",
-    "                corner_count += 1\n",
-    "\n",
-    "    return corner_count"
    ]
   },
   {
@@ -161,7 +69,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "algo_name = \"original\""
+    "# algo_name = \"original\"\n",
+    "algo_name = \"add_corner_constraint\""
    ]
   },
   {
@@ -173,7 +82,7 @@
    "source": [
     "grid_size = 10\n",
     "graph_3d = Graph_3d(grid_size=grid_size)\n",
-    "algo = Algo(grid_size=grid_size, dim=3, to=graph_3d.to, algo_name=algo_name)"
+    "algo = Algo(graph_3d, dim=3, algo_name=algo_name)"
    ]
   },
   {
@@ -183,7 +92,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def main_3d_inspection(pairs, param_name, w1, w2, w3, w4=None, do_visualize=False):\n",
+    "def main_3d_inspection(\n",
+    "        graph_3d, \n",
+    "        pairs, \n",
+    "        algo, \n",
+    "        param_name, \n",
+    "        w1, \n",
+    "        w2, \n",
+    "        w3, \n",
+    "        w4=None, \n",
+    "        do_visualize=False\n",
+    "        ):\n",
     "    \"\"\"\n",
     "    Args:\n",
     "        pairs: スタート地点・ゴール地点の組\n",
@@ -238,7 +157,7 @@
     "    # すべてのpathの曲げ回数の和を計算\n",
     "    n_corner = 0\n",
     "    for path in paths:\n",
-    "        n_corner += counting_corner(grid_size, path)\n",
+    "        n_corner += graph_3d.counting_corner(path)\n",
     "\n",
     "    return param_name, sd, path1_length, path2_length, path3_length, n_cross, paths, n_corner\n",
     "\n",
@@ -266,21 +185,6 @@
     "#     \"combination_9\": {\"w1\": 5, \"w2\": 100, \"w3\": 3},\n",
     "#     \"combination_10\": {\"w1\": 5, \"w2\": 3, \"w3\": 100},\n",
     "#     \"combination_11\": {\"w1\": 1, \"w2\": 1, \"w3\": 1},\n",
-    "# }\n",
-    "\n",
-    "# # 重み設定　（カスタム目的関数その1）\n",
-    "# weight_sets = {\n",
-    "#     \"combination_1\": {\"w1\": 10, \"w2\": 45, \"w3\": 45, \"w4\": 50},\n",
-    "#     # \"combination_2\": {\"w1\": 10, \"w2\": 5, \"w3\": 3, \"w4\": },\n",
-    "#     # \"combination_3\": {\"w1\": 10, \"w2\": 3, \"w3\": 5, \"w4\": },\n",
-    "#     # \"combination_4\": {\"w1\": 5, \"w2\": 10, \"w3\": 3, \"w4\": },\n",
-    "#     # \"combination_5\": {\"w1\": 3, \"w2\": 10, \"w3\": 5, \"w4\": },\n",
-    "#     # \"combination_6\": {\"w1\": 5, \"w2\": 3, \"w3\": 10, \"w4\": },\n",
-    "#     # \"combination_7\": {\"w1\": 3, \"w2\": 5, \"w3\": 10, \"w4\": },\n",
-    "#     # \"combination_8\": {\"w1\": 100, \"w2\": 5, \"w3\": 3, \"w4\": 10},\n",
-    "#     \"combination_9\": {\"w1\": 5, \"w2\": 100, \"w3\": 3, \"w4\": 12},\n",
-    "#     # \"combination_10\": {\"w1\": 5, \"w2\": 3, \"w3\": 100, \"w4\": },\n",
-    "#     \"combination_11\": {\"w1\": 1, \"w2\": 1, \"w3\": 1, \"w4\": 1},\n",
     "# }\n",
     "\n",
     "# 重み設定　（カスタム目的関数その1）\n",
@@ -360,9 +264,6 @@
     "}\n",
     "\n",
     "\n",
-    "# cfg = weight_sets[\"combination_1\"]\n",
-    "# cfg = weight_sets[\"combination_7\"]\n",
-    "\n",
     "# スタート地点・ゴール地点の設定\n",
     "pairs = [(1, 19), (4, 140), (15, 452)] # 実験1 すべて偶数長でつなげるパターン\n",
     "# pairs = [(1, 29), (4, 140), (15, 452)] # 実験2 一つだけ奇数、あとは偶数のパターン（偶奇が異なるパターン）\n",
@@ -372,13 +273,12 @@
     "# 参考のために、それぞれのスタート・ゴールの最短経路長を出しておく。\n",
     "shortest_dist = []\n",
     "for p in pairs:\n",
-    "    d, prevs = dijkstra(p[0], grid_size**3, graph_3d.to)\n",
-    "    path = get_path(p[0], p[1], prevs)\n",
+    "    d, prevs = utils.dijkstra(p[0], grid_size**3, graph_3d.to)\n",
+    "    path = utils.get_path(p[0], p[1], prevs)\n",
     "    path = path[::-1]\n",
     "    print('len(path) =', len(path))\n",
     "    print('path =', path)\n",
     "    \n",
-    "\n",
     "\n",
     "param_names = []\n",
     "sds = []\n",
@@ -397,7 +297,7 @@
     "\n",
     "for key in weight_sets.keys():\n",
     "    weights = weight_sets[key]\n",
-    "    param_name, sd, path1_length, path2_length, path3_length, n_cross, paths, n_corner = main_3d_inspection(pairs, key, **weights, do_visualize=False)\n",
+    "    param_name, sd, path1_length, path2_length, path3_length, n_cross, paths, n_corner = main_3d_inspection(graph_3d, pairs, algo, key, **weights, do_visualize=False)\n",
     "    all_pathes[param_name] = paths\n",
     "    param_names.append(param_name)\n",
     "    sds.append(sd)\n",
@@ -503,9 +403,9 @@
    "outputs": [],
    "source": [
     "# 特定の実験で得られたpathsを表示する。（実験のパラメータ名称を指定する）\n",
-    "# param_name = \"combination_9_w4_additional\"\n",
+    "param_name = \"combination_9_w4_additional\"\n",
     "# param_name = \"combination_9_w4_w3\"\n",
-    "param_name = \"dominant_w2\"\n",
+    "# param_name = \"dominant_w2\"\n",
     "# param_name = \"combination_1\"\n",
     "\n",
     "paths = all_pathes[param_name]\n",
@@ -514,7 +414,8 @@
     "for i, path in enumerate(paths):\n",
     "    print(f\"w1: {weight_sets[param_name][\"w1\"]}, w2: {weight_sets[param_name][\"w2\"]}, w3: {weight_sets[param_name][\"w3\"]}\")\n",
     "    print('len(path) =', len(path))\n",
-    "    print('n_corner =', counting_corner(grid_size, path))\n",
+    "    # print('n_corner =', counting_corner(grid_size, path))\n",
+    "    print('n_corner =', graph_3d.counting_corner(path))\n",
     "    if i == 0:\n",
     "        path1_length = len(path)\n",
     "    elif i == 1:\n",
