格子グリッドを立方体から直方体に拡張

--- a/paper_02/main.ipynb
+++ b/paper_02/main.ipynb
@@ -452,13 +452,135 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vis_gridpath_3d(10, paths=None, obs_nodes=graph_3d.obs)"
+    "vis_gridpath_3d(10, paths=None, obs_nodes=graph_3d.obs)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "0bce13e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vis_gridpath_3d((10, 10 ,5), paths=None, obs_nodes=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "176a4a8d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7dff94c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e581db80",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## for debug"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f3c8df8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid_size = 10\n",
+    "graph_3d = Graph_3d(grid_size=grid_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ba80dee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph_3d.to_without_obs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12c340cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# vis_gridpath_3d(10, paths=None, obs_nodes=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8927edab",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54294e97",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "052b6ed5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f5f66f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid_size = (6, 5, 4)\n",
+    "graph_3d = Graph_3d(grid_size=grid_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c9280d35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(graph_3d.N):\n",
+    "    print(f\"{i}: {graph_3d.to_without_obs[i]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d63c0c64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vis_gridpath_3d((6, 5, 4), paths=None, obs_nodes=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5444ff6e",
    "metadata": {},
    "outputs": [],
    "source": []
