満足化トレードオフの実装の初版が完了(by ChatGPT)

--- a/paper_02/main.ipynb
+++ b/paper_02/main.ipynb
@@ -30,6 +30,7 @@
     "import utils\n",
     "from graph import Graph_2d, Graph_3d\n",
     "from algo import Algo\n",
+    "from algo2 import Algo2\n",
     "from visualization import *"
    ]
   },
@@ -69,8 +70,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# algo_name = \"original\"\n",
-    "algo_name = \"add_corner_constraint\""
+    "algo_name = \"original\"\n",
+    "# algo_name = \"add_corner_constraint\""
    ]
   },
   {
@@ -82,7 +83,12 @@
    "source": [
     "grid_size = 10\n",
     "graph_3d = Graph_3d(grid_size=grid_size)\n",
-    "algo = Algo(graph_3d, dim=3, algo_name=algo_name)"
+    "\n",
+    "# 論文実装\n",
+    "algo = Algo(graph_3d, dim=3, algo_name=algo_name)\n",
+    "\n",
+    "# 満足化トレードオフ法\n",
+    "algo2 = Algo2(graph_3d, dim=3, algo_name=algo_name)"
    ]
   },
   {
@@ -117,8 +123,17 @@
     "    # random.seed(2)\n",
     "\n",
     "    # paths = algo.equal_length_routing(pairs, w1=w1, w2=w2, w3=w3)\n",
-    "    paths = algo.equal_length_routing(pairs, w1=w1, w2=w2, w3=w3, w4=w4)\n",
+    "    # paths = algo.equal_length_routing(pairs, w1=w1, w2=w2, w3=w3, w4=w4)\n",
     "\n",
+    "    # 満足化トレードオフ法\n",
+    "    paths = algo.equal_length_routing(\n",
+    "        pairs,\n",
+    "        select_mode=\"satisficing\",\n",
+    "        phase_init=1,       # 交差から始める\n",
+    "        max_iter=5000,\n",
+    "        num_ants=200\n",
+    "    )\n",
+    "    \n",
     "    print(\"======================================================================================\")\n",
     "    print(f\"パラメータ名：{param_name}\")\n",
     "    print(f\"seed値：{sd}\")\n",
@@ -168,6 +183,42 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "96f8aab3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_start_goal_pairs(sg_pattern: str = None):\n",
+    "    \"\"\"\n",
+    "    スタート地点・ゴール地点の設定する\n",
+    "\n",
+    "    Args:\n",
+    "        sg_pattern (srt): \n",
+    "    Returns:\n",
+    "        pairs (List[(int, int)]) : (スタート地点・ゴール地点)の組み合わせ\n",
+    "    \"\"\"\n",
+    "    # \n",
+    "    pairs = [(1, 19), (4, 140), (15, 452)] # 実験1 すべて偶数長でつなげるパターン\n",
+    "    # pairs = [(1, 29), (4, 140), (15, 452)] # 実験2 一つだけ奇数、あとは偶数のパターン（偶奇が異なるパターン）\n",
+    "    # pairs = [] # 実験3 ランダムに点を生成\n",
+    "\n",
+    "    # pairs_dict = {\n",
+    "    #     \"jikken_1\": [(1, 19), (4, 140), (15, 452)], # 実験1 すべて偶数長でつなげるパターン (10×)\n",
+    "    # }\n",
+    "\n",
+    "    return pairs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61284c87",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "79234479",
    "metadata": {},
    "outputs": [],
@@ -187,88 +238,91 @@
     "#     \"combination_11\": {\"w1\": 1, \"w2\": 1, \"w3\": 1},\n",
     "# }\n",
     "\n",
-    "# 重み設定　（カスタム目的関数その1）\n",
+    "# # 重み設定　（カスタム目的関数その1）\n",
+    "# weight_sets = {\n",
+    "#     # === combination_1 ===\n",
+    "#     \"combination_1_w4_w1\": {\"w1\": 10, \"w2\": 45, \"w3\": 45, \"w4\": 10},\n",
+    "#     \"combination_1_w4_w2\": {\"w1\": 10, \"w2\": 45, \"w3\": 45, \"w4\": 45},\n",
+    "#     \"combination_1_w4_w3\": {\"w1\": 10, \"w2\": 45, \"w3\": 45, \"w4\": 45},\n",
+    "#     \"combination_1_w4_mean\": {\"w1\": 10, \"w2\": 45, \"w3\": 45, \"w4\": 33},\n",
+    "\n",
+    "#     # === combination_2 ===\n",
+    "#     \"combination_2_w4_w1\": {\"w1\": 10, \"w2\": 5, \"w3\": 3, \"w4\": 10},\n",
+    "#     \"combination_2_w4_w2\": {\"w1\": 10, \"w2\": 5, \"w3\": 3, \"w4\": 5},\n",
+    "#     \"combination_2_w4_w3\": {\"w1\": 10, \"w2\": 5, \"w3\": 3, \"w4\": 3},\n",
+    "#     \"combination_2_w4_mean\": {\"w1\": 10, \"w2\": 5, \"w3\": 3, \"w4\": 6},\n",
+    "\n",
+    "#     # === combination_3 ===\n",
+    "#     \"combination_3_w4_w1\": {\"w1\": 10, \"w2\": 3, \"w3\": 5, \"w4\": 10},\n",
+    "#     \"combination_3_w4_w2\": {\"w1\": 10, \"w2\": 3, \"w3\": 5, \"w4\": 3},\n",
+    "#     \"combination_3_w4_w3\": {\"w1\": 10, \"w2\": 3, \"w3\": 5, \"w4\": 5},\n",
+    "#     \"combination_3_w4_mean\": {\"w1\": 10, \"w2\": 3, \"w3\": 5, \"w4\": 6},\n",
+    "\n",
+    "#     # === combination_4 ===\n",
+    "#     \"combination_4_w4_w1\": {\"w1\": 5, \"w2\": 10, \"w3\": 3, \"w4\": 5},\n",
+    "#     \"combination_4_w4_w2\": {\"w1\": 5, \"w2\": 10, \"w3\": 3, \"w4\": 10},\n",
+    "#     \"combination_4_w4_w3\": {\"w1\": 5, \"w2\": 10, \"w3\": 3, \"w4\": 3},\n",
+    "#     \"combination_4_w4_mean\": {\"w1\": 5, \"w2\": 10, \"w3\": 3, \"w4\": 6},\n",
+    "\n",
+    "#     # === combination_5 ===\n",
+    "#     \"combination_5_w4_w1\": {\"w1\": 3, \"w2\": 10, \"w3\": 5, \"w4\": 3},\n",
+    "#     \"combination_5_w4_w2\": {\"w1\": 3, \"w2\": 10, \"w3\": 5, \"w4\": 10},\n",
+    "#     \"combination_5_w4_w3\": {\"w1\": 3, \"w2\": 10, \"w3\": 5, \"w4\": 5},\n",
+    "#     \"combination_5_w4_mean\": {\"w1\": 3, \"w2\": 10, \"w3\": 5, \"w4\": 6},\n",
+    "\n",
+    "#     # === combination_6 ===\n",
+    "#     \"combination_6_w4_w1\": {\"w1\": 5, \"w2\": 3, \"w3\": 10, \"w4\": 5},\n",
+    "#     \"combination_6_w4_w2\": {\"w1\": 5, \"w2\": 3, \"w3\": 10, \"w4\": 3},\n",
+    "#     \"combination_6_w4_w3\": {\"w1\": 5, \"w2\": 3, \"w3\": 10, \"w4\": 10},\n",
+    "#     \"combination_6_w4_mean\": {\"w1\": 5, \"w2\": 3, \"w3\": 10, \"w4\": 6},\n",
+    "\n",
+    "#     # === combination_7 ===\n",
+    "#     \"combination_7_w4_w1\": {\"w1\": 3, \"w2\": 5, \"w3\": 10, \"w4\": 3},\n",
+    "#     \"combination_7_w4_w2\": {\"w1\": 3, \"w2\": 5, \"w3\": 10, \"w4\": 5},\n",
+    "#     \"combination_7_w4_w3\": {\"w1\": 3, \"w2\": 5, \"w3\": 10, \"w4\": 10},\n",
+    "#     \"combination_7_w4_mean\": {\"w1\": 3, \"w2\": 5, \"w3\": 10, \"w4\": 6},\n",
+    "\n",
+    "#     # === combination_8 ===\n",
+    "#     \"combination_8_w4_w1\": {\"w1\": 100, \"w2\": 5, \"w3\": 3, \"w4\": 100},\n",
+    "#     \"combination_8_w4_w2\": {\"w1\": 100, \"w2\": 5, \"w3\": 3, \"w4\": 5},\n",
+    "#     \"combination_8_w4_w3\": {\"w1\": 100, \"w2\": 5, \"w3\": 3, \"w4\": 3},\n",
+    "#     \"combination_8_w4_mean\": {\"w1\": 100, \"w2\": 5, \"w3\": 3, \"w4\": 36},\n",
+    "\n",
+    "#     # === combination_9 ===\n",
+    "#     \"combination_9_w4_w1\": {\"w1\": 5, \"w2\": 100, \"w3\": 3, \"w4\": 5},\n",
+    "#     \"combination_9_w4_w2\": {\"w1\": 5, \"w2\": 100, \"w3\": 3, \"w4\": 100},\n",
+    "#     \"combination_9_w4_w3\": {\"w1\": 5, \"w2\": 100, \"w3\": 3, \"w4\": 3},\n",
+    "#     \"combination_9_w4_mean\": {\"w1\": 5, \"w2\": 100, \"w3\": 3, \"w4\": 36},\n",
+    "#     \"combination_9_w4_additional\": {\"w1\": 5, \"w2\": 100, \"w3\": 3, \"w4\": 10},\n",
+    "\n",
+    "#     # === combination_10 ===\n",
+    "#     \"combination_10_w4_w1\": {\"w1\": 5, \"w2\": 3, \"w3\": 100, \"w4\": 5},\n",
+    "#     \"combination_10_w4_w2\": {\"w1\": 5, \"w2\": 3, \"w3\": 100, \"w4\": 3},\n",
+    "#     \"combination_10_w4_w3\": {\"w1\": 5, \"w2\": 3, \"w3\": 100, \"w4\": 100},\n",
+    "#     \"combination_10_w4_mean\": {\"w1\": 5, \"w2\": 3, \"w3\": 100, \"w4\": 36},\n",
+    "\n",
+    "#     # === combination_11 ===\n",
+    "#     \"combination_11_w4_w1\": {\"w1\": 1, \"w2\": 1, \"w3\": 1, \"w4\": 1},\n",
+    "#     \"combination_11_w4_w2\": {\"w1\": 1, \"w2\": 1, \"w3\": 1, \"w4\": 1},\n",
+    "#     \"combination_11_w4_w3\": {\"w1\": 1, \"w2\": 1, \"w3\": 1, \"w4\": 1},\n",
+    "#     \"combination_11_w4_mean\": {\"w1\": 1, \"w2\": 1, \"w3\": 1, \"w4\": 1},\n",
+    "\n",
+    "#     # === 支配ケース（4変数すべて） ===\n",
+    "#     \"dominant_w1\": {\"w1\": 100, \"w2\": 5, \"w3\": 3, \"w4\": 5},\n",
+    "#     \"dominant_w2\": {\"w1\": 5, \"w2\": 100, \"w3\": 3, \"w4\": 5},\n",
+    "#     \"dominant_w3\": {\"w1\": 5, \"w2\": 3, \"w3\": 100, \"w4\": 5},\n",
+    "#     \"dominant_w4\": {\"w1\": 5, \"w2\": 3, \"w3\": 5, \"w4\": 100},\n",
+    "# }\n",
+    "\n",
+    "\n",
+    "# 重み設定　（満足化トレードオフ、重みは不要だが実装上に入れておく）\n",
     "weight_sets = {\n",
-    "    # === combination_1 ===\n",
-    "    \"combination_1_w4_w1\": {\"w1\": 10, \"w2\": 45, \"w3\": 45, \"w4\": 10},\n",
-    "    \"combination_1_w4_w2\": {\"w1\": 10, \"w2\": 45, \"w3\": 45, \"w4\": 45},\n",
-    "    \"combination_1_w4_w3\": {\"w1\": 10, \"w2\": 45, \"w3\": 45, \"w4\": 45},\n",
-    "    \"combination_1_w4_mean\": {\"w1\": 10, \"w2\": 45, \"w3\": 45, \"w4\": 33},\n",
-    "\n",
-    "    # === combination_2 ===\n",
-    "    \"combination_2_w4_w1\": {\"w1\": 10, \"w2\": 5, \"w3\": 3, \"w4\": 10},\n",
-    "    \"combination_2_w4_w2\": {\"w1\": 10, \"w2\": 5, \"w3\": 3, \"w4\": 5},\n",
-    "    \"combination_2_w4_w3\": {\"w1\": 10, \"w2\": 5, \"w3\": 3, \"w4\": 3},\n",
-    "    \"combination_2_w4_mean\": {\"w1\": 10, \"w2\": 5, \"w3\": 3, \"w4\": 6},\n",
-    "\n",
-    "    # === combination_3 ===\n",
-    "    \"combination_3_w4_w1\": {\"w1\": 10, \"w2\": 3, \"w3\": 5, \"w4\": 10},\n",
-    "    \"combination_3_w4_w2\": {\"w1\": 10, \"w2\": 3, \"w3\": 5, \"w4\": 3},\n",
-    "    \"combination_3_w4_w3\": {\"w1\": 10, \"w2\": 3, \"w3\": 5, \"w4\": 5},\n",
-    "    \"combination_3_w4_mean\": {\"w1\": 10, \"w2\": 3, \"w3\": 5, \"w4\": 6},\n",
-    "\n",
-    "    # === combination_4 ===\n",
-    "    \"combination_4_w4_w1\": {\"w1\": 5, \"w2\": 10, \"w3\": 3, \"w4\": 5},\n",
-    "    \"combination_4_w4_w2\": {\"w1\": 5, \"w2\": 10, \"w3\": 3, \"w4\": 10},\n",
-    "    \"combination_4_w4_w3\": {\"w1\": 5, \"w2\": 10, \"w3\": 3, \"w4\": 3},\n",
-    "    \"combination_4_w4_mean\": {\"w1\": 5, \"w2\": 10, \"w3\": 3, \"w4\": 6},\n",
-    "\n",
-    "    # === combination_5 ===\n",
-    "    \"combination_5_w4_w1\": {\"w1\": 3, \"w2\": 10, \"w3\": 5, \"w4\": 3},\n",
-    "    \"combination_5_w4_w2\": {\"w1\": 3, \"w2\": 10, \"w3\": 5, \"w4\": 10},\n",
-    "    \"combination_5_w4_w3\": {\"w1\": 3, \"w2\": 10, \"w3\": 5, \"w4\": 5},\n",
-    "    \"combination_5_w4_mean\": {\"w1\": 3, \"w2\": 10, \"w3\": 5, \"w4\": 6},\n",
-    "\n",
-    "    # === combination_6 ===\n",
-    "    \"combination_6_w4_w1\": {\"w1\": 5, \"w2\": 3, \"w3\": 10, \"w4\": 5},\n",
-    "    \"combination_6_w4_w2\": {\"w1\": 5, \"w2\": 3, \"w3\": 10, \"w4\": 3},\n",
-    "    \"combination_6_w4_w3\": {\"w1\": 5, \"w2\": 3, \"w3\": 10, \"w4\": 10},\n",
-    "    \"combination_6_w4_mean\": {\"w1\": 5, \"w2\": 3, \"w3\": 10, \"w4\": 6},\n",
-    "\n",
-    "    # === combination_7 ===\n",
-    "    \"combination_7_w4_w1\": {\"w1\": 3, \"w2\": 5, \"w3\": 10, \"w4\": 3},\n",
-    "    \"combination_7_w4_w2\": {\"w1\": 3, \"w2\": 5, \"w3\": 10, \"w4\": 5},\n",
-    "    \"combination_7_w4_w3\": {\"w1\": 3, \"w2\": 5, \"w3\": 10, \"w4\": 10},\n",
-    "    \"combination_7_w4_mean\": {\"w1\": 3, \"w2\": 5, \"w3\": 10, \"w4\": 6},\n",
-    "\n",
-    "    # === combination_8 ===\n",
-    "    \"combination_8_w4_w1\": {\"w1\": 100, \"w2\": 5, \"w3\": 3, \"w4\": 100},\n",
-    "    \"combination_8_w4_w2\": {\"w1\": 100, \"w2\": 5, \"w3\": 3, \"w4\": 5},\n",
-    "    \"combination_8_w4_w3\": {\"w1\": 100, \"w2\": 5, \"w3\": 3, \"w4\": 3},\n",
-    "    \"combination_8_w4_mean\": {\"w1\": 100, \"w2\": 5, \"w3\": 3, \"w4\": 36},\n",
-    "\n",
-    "    # === combination_9 ===\n",
-    "    \"combination_9_w4_w1\": {\"w1\": 5, \"w2\": 100, \"w3\": 3, \"w4\": 5},\n",
-    "    \"combination_9_w4_w2\": {\"w1\": 5, \"w2\": 100, \"w3\": 3, \"w4\": 100},\n",
-    "    \"combination_9_w4_w3\": {\"w1\": 5, \"w2\": 100, \"w3\": 3, \"w4\": 3},\n",
-    "    \"combination_9_w4_mean\": {\"w1\": 5, \"w2\": 100, \"w3\": 3, \"w4\": 36},\n",
-    "    \"combination_9_w4_additional\": {\"w1\": 5, \"w2\": 100, \"w3\": 3, \"w4\": 10},\n",
-    "\n",
-    "    # === combination_10 ===\n",
-    "    \"combination_10_w4_w1\": {\"w1\": 5, \"w2\": 3, \"w3\": 100, \"w4\": 5},\n",
-    "    \"combination_10_w4_w2\": {\"w1\": 5, \"w2\": 3, \"w3\": 100, \"w4\": 3},\n",
-    "    \"combination_10_w4_w3\": {\"w1\": 5, \"w2\": 3, \"w3\": 100, \"w4\": 100},\n",
-    "    \"combination_10_w4_mean\": {\"w1\": 5, \"w2\": 3, \"w3\": 100, \"w4\": 36},\n",
-    "\n",
-    "    # === combination_11 ===\n",
-    "    \"combination_11_w4_w1\": {\"w1\": 1, \"w2\": 1, \"w3\": 1, \"w4\": 1},\n",
-    "    \"combination_11_w4_w2\": {\"w1\": 1, \"w2\": 1, \"w3\": 1, \"w4\": 1},\n",
-    "    \"combination_11_w4_w3\": {\"w1\": 1, \"w2\": 1, \"w3\": 1, \"w4\": 1},\n",
-    "    \"combination_11_w4_mean\": {\"w1\": 1, \"w2\": 1, \"w3\": 1, \"w4\": 1},\n",
-    "\n",
-    "    # === 支配ケース（4変数すべて） ===\n",
-    "    \"dominant_w1\": {\"w1\": 100, \"w2\": 5, \"w3\": 3, \"w4\": 5},\n",
-    "    \"dominant_w2\": {\"w1\": 5, \"w2\": 100, \"w3\": 3, \"w4\": 5},\n",
-    "    \"dominant_w3\": {\"w1\": 5, \"w2\": 3, \"w3\": 100, \"w4\": 5},\n",
-    "    \"dominant_w4\": {\"w1\": 5, \"w2\": 3, \"w3\": 5, \"w4\": 100},\n",
+    "    \"combination_1\": {\"w1\": None, \"w2\": None, \"w3\": None},\n",
     "}\n",
     "\n",
     "\n",
     "# スタート地点・ゴール地点の設定\n",
-    "pairs = [(1, 19), (4, 140), (15, 452)] # 実験1 すべて偶数長でつなげるパターン\n",
-    "# pairs = [(1, 29), (4, 140), (15, 452)] # 実験2 一つだけ奇数、あとは偶数のパターン（偶奇が異なるパターン）\n",
-    "# pairs = [] # 実験3 ランダムに点を生成\n",
-    "\n",
+    "pairs = generate_start_goal_pairs()\n",
     "\n",
     "# 参考のために、それぞれのスタート・ゴールの最短経路長を出しておく。\n",
     "shortest_dist = []\n",
@@ -297,7 +351,7 @@
     "\n",
     "for key in weight_sets.keys():\n",
     "    weights = weight_sets[key]\n",
-    "    param_name, sd, path1_length, path2_length, path3_length, n_cross, paths, n_corner = main_3d_inspection(graph_3d, pairs, algo, key, **weights, do_visualize=False)\n",
+    "    param_name, sd, path1_length, path2_length, path3_length, n_cross, paths, n_corner = main_3d_inspection(graph_3d, pairs, algo2, key, **weights, do_visualize=False)\n",
     "    all_pathes[param_name] = paths\n",
     "    param_names.append(param_name)\n",
     "    sds.append(sd)\n",
@@ -312,8 +366,39 @@
     "    w2s.append(weights[\"w2\"])\n",
     "    w3s.append(weights[\"w3\"])\n",
     "    if \"w4\" in weights.keys():\n",
-    "        w4s.append(weights[\"w4\"])\n"
+    "        w4s.append(weights[\"w4\"])\n",
+    "\n",
+    "\n",
+    "\n",
+    "# # 満足化トレードオフ実験（20260224）\n",
+    "# for seed in range(0, 20):\n",
+    "#     param_name, sd, path1_length, path2_length, path3_length, n_cross, paths, n_corner = main_3d_inspection(\n",
+    "#         seed, \n",
+    "#         graph_3d, \n",
+    "#         pairs, \n",
+    "#         algo, \n",
+    "#         key=\"\", \n",
+    "#         w1=None, \n",
+    "#         w2=None, \n",
+    "#         w3=None, \n",
+    "#         do_visualize=False,\n",
+    "#     )\n",
+    "#     all_pathes[sd] = paths\n",
+    "#     sds.append(sd)\n",
+    "#     path1_lengths.append(path1_length)\n",
+    "#     path2_lengths.append(path2_length)\n",
+    "#     path3_lengths.append(path3_length)\n",
+    "#     n_crosses.append(n_cross)\n",
+    "#     n_corners.append(n_corner)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd61e86b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -325,15 +410,21 @@
     "import pandas as pd\n",
     "\n",
     "# columns = [\"seed\", \"param_name\", \"w1\", \"w2\", \"w3\", \"w4\", \"path1_length\", \"path2_length\", \"path3_length\", \"n_cross\"]\n",
-    "columns = [\"seed\", \"param_name\", \"w1\", \"w2\", \"w3\", \"path1_length\", \"path2_length\", \"path3_length\", \"n_cross\"]\n",
+    "# columns = [\"seed\", \"param_name\", \"w1\", \"w2\", \"w3\", \"path1_length\", \"path2_length\", \"path3_length\", \"n_cross\"]\n",
+    "\n",
+    "# 満足化トレードオフ用\n",
+    "columns = [\"seed\", \"path1_length\", \"path2_length\", \"path3_length\", \"n_cross\"]\n",
+    "\n",
     "\n",
     "# 空の DataFrame を作成\n",
     "df = pd.DataFrame(columns=columns)\n",
     "\n",
-    "df[\"param_name\"] = param_names\n",
-    "df[\"w1\"] = w1s\n",
-    "df[\"w2\"] = w2s\n",
-    "df[\"w3\"] = w3s\n",
+    "if \"param_name\" in columns:\n",
+    "    df[\"param_name\"] = param_names\n",
+    "if (\"w1\" in columns) and (\"w2\" in columns) and (\"w3\" in columns):\n",
+    "    df[\"w1\"] = w1s \n",
+    "    df[\"w2\"] = w2s\n",
+    "    df[\"w3\"] = w3s\n",
     "if \"w4\" in columns:\n",
     "    df[\"w4\"] = w4s\n",
     "df[\"seed\"] = sds\n",
@@ -387,6 +478,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a053e688",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "paths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "acacb1c0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "1d195e25",
    "metadata": {},
@@ -430,9 +539,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5c9d5bd2",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### 可視化（満足化トレードオフ法）"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c9d5bd2",
+   "id": "c791d771",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# \n",
+    "# 結果の表示(1本ずつの表示)\n",
+    "for i, path in enumerate(paths):\n",
+    "    print('len(path) =', len(path))\n",
+    "    # print('n_corner =', counting_corner(grid_size, path))\n",
+    "    print('n_corner =', graph_3d.counting_corner(path))\n",
+    "    if i == 0:\n",
+    "        path1_length = len(path)\n",
+    "    elif i == 1:\n",
+    "        path2_length = len(path)\n",
+    "    elif i == 2:\n",
+    "        path3_length = len(path)\n",
+    "\n",
+    "    vis_gridpath_3d(grid_size, [path], obs_nodes=graph_3d.obs, saveflg=False)\n",
+    "\n",
+    "# 結果の表示(3本まとめて表示)\n",
+    "vis_gridpath_3d(grid_size, paths, obs_nodes=graph_3d.obs, saveflg=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03c05014",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -581,6 +725,87 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5444ff6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# vis_gridpath_3d((50, 50, 10), paths=None, obs_nodes=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b081375",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20c6169c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4054a16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid_size = (6, 5, 4)\n",
+    "graph_3d = Graph_3d(grid_size=grid_size)\n",
+    "\n",
+    "anss = utils.full_search_path(\n",
+    "    grid_size,\n",
+    "    graph_3d.to_without_obs,\n",
+    "    start = 0,\n",
+    "    goal = 15,\n",
+    "    limit = 6,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f4065af",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4b4599a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5617eda6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(len(anss))\n",
+    "for ans in anss:\n",
+    "    print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60d74997",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4b48a2b",
    "metadata": {},
    "outputs": [],
    "source": []
